@@ -1,13 +1,8 @@
 package com.dnamaster10.traincartsticketshop.util;
 
-import com.dnamaster10.traincartsticketshop.objects.guis.EditGui;
 import com.dnamaster10.traincartsticketshop.objects.guis.Gui;
 import org.bukkit.entity.Player;
-import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.event.inventory.InventoryDragEvent;
-import org.bukkit.inventory.Inventory;
 
-import java.util.Objects;
 import java.util.Stack;
 
 import static com.dnamaster10.traincartsticketshop.TraincartsTicketShop.getPlugin;
@@ -30,22 +25,21 @@ public class Session {
         }
     }
 
-    public boolean isGuiInventory(Inventory inventory) {
-        //Returns true if the passed inventory matches that of the highest gui on the stack
-        if (guis.isEmpty()) {
-            return false;
-        }
-        Inventory guiInventory = guis.peek().getInventory();
-        return Objects.equals(guiInventory, inventory);
-    }
-
+    /**
+     * Adds a gui to the player's Gui Stack.
+     *
+     * @param gui The Gui to be added to the stack
+     */
     public void addGui(Gui gui) {
         guis.push(gui);
         if (guis.size() > maxGuis) {
-            guis.remove(0);
+            guis.removeFirst();
         }
     }
 
+    /**
+     * Closes the current open Gui, and opens the previous Gui on the Gui Stack.
+     */
     public void back() {
         if (guis.size() <= 1) {
             owner.closeInventory();
@@ -56,24 +50,12 @@ public class Session {
         previousGui.open();
     }
 
+    /**
+     * Checks whether going back is possible.
+     *
+     * @return True if it's possible to go back
+     */
     public boolean checkBack() {
         return guis.size() > 1;
-    }
-
-    public void handleInventoryClick(InventoryClickEvent event) {
-        if (!(guis.peek() instanceof EditGui)) event.setCancelled(true);
-        guis.peek().handleClick(event);
-    }
-
-    public void handleInventoryDrag(InventoryDragEvent event) {
-        if (!(guis.peek() instanceof EditGui)) event.setCancelled(true);
-        else ((EditGui) guis.peek()).handleDrag(event);
-    }
-
-    public void handleInventoryClose() {
-        Gui topGui = guis.peek();
-        if (topGui instanceof EditGui e) {
-            e.handleCloseEvent();
-        }
     }
 }
